--- a/codepush.html
+++ b/codepush.html
@@ -10,7 +10,7 @@
 /*alternative image attachment using style attribute */
 <br> </br>
 <img src = "C:\Users\user\Pictures\Saved Pictures\naicity.jpg" alt = "the nairobi city by night" style="width:700px; height: 545px;">
-<p> here is a random picture that I also like... </p>
+<p> Here is a random picture that I also like... </p>
 <br> </br>
 <img src = "C:\Users\user\Pictures\Saved Pictures\neon-reflection-wallpaper.jpg" alt = "city" style = "width: 800px; height: 650px;">
 </body>
