--- a/conflictresolution.html
+++ b/conflictresolution.html
@@ -17,7 +17,8 @@
         <p> Academically, I find Statistics very interesting, especially on the financial aspect ie finacial analysis and economics</p>
         <p> I am currently obsessed with coding, I hope to land a role in Tech soon, (prob in May 2023) and build exciting websites and finally, my Portfolio !</p>
         <p> I am most likely to shift my interests but, primarily, these three have a special place in my heart!</p>
-    </div>
+    </div> 
+    
     <div> <h1>Here is an article explaining the difference between div and span elements as used in html. </h1></div>
 
     <div id="divorspan">
@@ -25,7 +26,8 @@
         <p> Span and div are both generic HTML elements that group together related parts of a web. However, they serve different functions. A div element is used for block-level organization and styling of page elements, whereas a span element is used for inline organization and styling.
         The div (division) element is a generic block-level element. You most frequently use it to divide your page content into digestible blocks. A block element is a page element that starts a new line and has a width equal to the entire page or the parent container.It's extremely common to see divs used to group related paragraphs, images, headings, and links together. For instance, consider this. A three-paragraph article may be enclosed in a div, and a navigation menu containing links might be enclosed in another div. Using divs this way makes it easier to identify different page sections and apply styling to them with CSS.
         Span is a generic inline element often used to apply styling to a portion of content. An inline element does not start a new line and only takes up as much space on the page as its content. Span tags are used on small segments of text, links, images, and other HTML elements that appear inline with the surrounding content.
-        We can summarize the primary differences between span vs div like this: A div tag creates a block-level element while a span tag wraps around an inline element. Additionally, the  span tag is used to group smaller pieces of text together, whereas div can be used to group larger ones. Another significant difference between span and div elements is nesting. While it's common to see div elements nested, it's best practice to avoid nesting span tags to avoid confusion</p>
+        We can summarize the primary differences between span vs div like this: <br>         
+            A div tag creates a block-level element while a span tag wraps around an inline element. Additionally, the  span tag is used to group smaller pieces of text together, whereas div can be used to group larger ones. Another significant difference between span and div elements is nesting. While it's common to see div elements nested, it's best practice to avoid nesting span tags to avoid confusion</p>
 
     </div>
     <p> Stick around to learn more</p>
